# meet-recorder

./: .gitignore  README.md  desktop_meeting_recorder_tz.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.sh
.github/workflows/: release.yml
docs/: macos-setup.md
meetrec/: __init__.py  __main__.py  autostart.py  com_init.py  config.py  logging_util.py
meetrec/calls/: __init__.py  projects.py  queue.py  worker.py
meetrec/detector/: __init__.py  apps.py  scoring.py  service.py  titles.py
meetrec/gui/: __init__.py  app.py  cooldown.py  glass.py  icons.py  native_panel_macos.py  native_prompt_macos.py  panel.py  panel_factory.py  (+6 more)
scripts/: drain_upload_queue.py  pair_calls.py
tests/: conftest.py  test_apps.py  test_apps_macos.py  test_audio_import.py  test_audio_macos.py  test_audio_mix.py  test_autostart.py  test_calls_client.py  test_calls_pairing.py  test_calls_queue.py  test_calls_queue_claim.py  test_calls_queue_retry.py  test_capture_mix.py  test_capture_native_mic.py  test_com_init.py  test_cooldown_app.py  test_detector_probe_imports.py  test_devices.py  test_icons.py  test_in_call_title.py  test_ipc.py  test_meeting_app_audio.py  test_network_probe.py  test_panel_actions.py  test_project_picker_skip.py  test_recorder_stop.py  test_scoring.py  test_scoring_macos.py  test_scoring_streak.py  test_scoring_v2.py  test_settings_pairing.py  test_single_instance.py  test_speaker_tracks.py  test_titles.py  test_upload_queue_drain.py
winrec/: __init__.py  __main__.py  autostart.py  com_init.py  config.py  logging_util.py
(+81 files in other folders)
